# SFH_Python_CODE

./: README.md  advanced_visualization.py  fitness_functions.py  monte_carlo.py  partition_calc.py  partition_entropy_analysis.py  reproduce_ch3_figures.py  setup_config.py  sfh_master_framework.py  sfh_simulation_v6-Enhanced-Combo.py  statistical_analysis.py
Generated_CODE_Data/: pareto_v6.csv  samples_v6.csv  weight_sweep_v6.csv
SFH_Article/: README.md
SFH_JCS_Article/: README.md  gaussian.stan  run_pymc3_hmc.py  run_stan_hmc.py
SFH_JCS_Article/Sentient-Field_Tools/: pyproject.toml  requirements.txt
SFH_JCS_Article/Sentient-Field_Tools/.github/workflows/: ci.yml
SFH_JCS_Article/Sentient-Field_Tools/Cosmo_Tuning/: README.md  __init__.py  demo.ipynb  model.p  model.py  optimizer.py  tests.py
SFH_JCS_Article/Sentient-Field_Tools/Eco_Coherence/: README.md  __init__.py  core.py  demo.ipynb  tests.py
SFH_JCS_Article/Sentient-Field_Tools/MCMC_qualic/: README.md  __init__.py  demo.ipynb  diagnostics.py  sampler.py  tests.py
SFH_JCS_Article/Sentient-Field_Tools/Nural_Fractal/: README.md  __init__.py  demo.ipynb  higuchi.py  tests.py
SFH_JCS_Article/Sentient-Field_Tools/Tests/: test_cosmo.py  test_eco.py  test_fractal.py  test_mcmc.py
field_dynamics_simulator/: Field_Dynamics_Simulator_Panel.py  field_dynamics_simulator.ipynb  field_dynamics_simulator.py
web_interface/: Field_Dynamics_Simulator.html
